# tamarin-prover

lib/term/: tamarin-prover-term.cabal
lib/term/src/Term/: Positions.hs
lib/term/src/Term/Maude/: Parser.hs  Process.hs  Signature.hs
lib/theory/src/: ClosedTheory.hs  OpenTheory.hs  Prover.hs  TheoryObject.hs
lib/theory/src/Items/: OptionItem.hs  TheoryItem.hs
lib/theory/src/Theory/Text/Parser/: Signature.hs
lib/theory/src/Theory/Tools/: Wellformedness.hs
src/Main/: TheoryLoader.hs
src/Main/Mode/: Batch.hs  Interactive.hs
